-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 5.0 Required
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Security 2021-04-19
-
54
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The Authorization Contract code is guarded by a feature flag. It makes a check before a command is run and after a command is run. When running setFeatureCompatibilityVersion, the code feature flag may be disabled before the command but enabled after it was run. This disagreement in the state of the feature flag causes causes the code to trigger incorrect assertions since the contract state may not have been cleared when it should have been.