SERVER-55801 Fix Authorization Contract state tracking during setFCV